clusters/GCP/YAML/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "YOUR_K8_NAMESPACE"
