clusters/GCP/YAML/hive-metastore-postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hive-metastore-postgres
  labels:
    app: hive-pod
spec:
  tolerations:
    - key: "node"
      operator: "Equal"
      value: "trino"
      effect: "NoSchedule"
  nodeSelector:
    pod: "hive"
  serviceAccountName: hive-sa
  containers:
    - name: hive-metastore
      image: bde2020/hive:latest
      ports:
        - containerPort: 9083
      command: ["/bin/bash", "-c"]
      args:
          - |
              set -e
              cp /gcs-conn/gcs-connector.jar /opt/hive/lib/
              echo "Waiting for Postgres..."
              for i in {1..60}; do
                PGPASSWORD=hivepass psql -h localhost -U hive -d metastore -c "select 1" >/dev/null 2>&1 && break
                sleep 2
              done
              if /opt/hive/bin/schematool -dbType postgres -info >/dev/null 2>&1; then
                echo "Schema present; skipping init."
              else
                echo "Initializing Hive metastore schema..."
                /opt/hive/bin/schematool -initSchema -dbType postgres -verbose
              fi
              exec hive --service metastore
      volumeMounts:
        - name: hive-site-config
          mountPath: /opt/hive/conf
        - name: hms-warehouse
          mountPath: /tmp/hive/warehouse
        - name: gcs-connector
          mountPath: /gcs-conn
        - name: gcs-sa
          mountPath: /secrets/gcp
          readOnly: true
      securityContext:
        capabilities:
          drop:
            - MKNOD
      imagePullPolicy: IfNotPresent
      resources:
        requests:
          cpu: "500m"
          memory: "0.5Gi"
        limits:
          cpu: "500m"
          memory: "0.5Gi"

    - name: postgres
      image: postgres:13
      resources:
        requests:
          cpu: "500m"
          memory: "0.5Gi"
        limits:
          cpu: "500m"
          memory: "0.5Gi"
      securityContext:
        capabilities:
          drop:
            - MKNOD
  volumes:
    - name: hive-site-config
      configMap:
        name: hive-site-config
    - name: hms-warehouse
      emptyDir: {}
    - name: gcs-connector
      emptyDir: {}
    - name: gcs-sa
      secret:
        secretName: gcs-sa-key
