clusters/GCP/YAML/syn_workload.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cs-inmem-als-ds
spec:
  selector:
    matchLabels: { app: cs-inmem-als }
  template:
    metadata:
      labels: { app: cs-inmem-als }
    spec:
      restartPolicy: Always
      tolerations:
        - key: "node"
          operator: "Equal"
          value: "trino"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: pod
                operator: In
                values: ["worker","hive","coord"]

      volumes:
        - name: movielens
          emptyDir: {}
      containers:
        - name: runner
          image: cloudsuite/in-memory-analytics
          command: ["/bin/bash","-lc"]
          args:
            - |
              [...]
          volumeMounts: [{ name: movielens, mountPath: /data }]
